adds plots to benchmark chapter and starts cleaning up the text

--- a/docs/2025-dotson-phd.bib
+++ b/docs/2025-dotson-phd.bib
@@ -20803,3 +20803,16 @@ battery storage for each {PJM} zone, region, locational deliverability area
 	langid = {english},
 	file = {Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/KIGCZDTZ/elon-musk-xai-memphis-gas-turbines-air-pollution-permits-00317582.html:text/html},
 }
+
+@online{bauer_ge_2010,
+	title = {{GE} Vernova {GE} 2.75 - 103 - 2.75 {MW} - Wind turbine},
+	url = {https://en.wind-turbine-models.com/turbines/747-ge-vernova-ge-2.75-103},
+	abstract = {datasheet • power curve • photos • brochures • models},
+	titleaddon = {wind-turbine-models},
+	type = {Commercial},
+	author = {Bauer, Lucas},
+	urldate = {2025-06-30},
+	date = {2010},
+	langid = {english},
+	file = {Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/FLYJFZFM/747-ge-vernova-ge-2.html:text/html},
+}
