--- a/docs/tables/technology_database2.tex
+++ b/docs/tables/technology_database2.tex
@@ -8,7 +8,7 @@ dispatchable & True & True & True & True & True & True & True & True & False & F
 renewable & False & True & False & False & False & False & False & False & True & True \\
 fuel\_type & None & None & None & None & None & None & None & None & solar & wind \\
 lifetime & 25 & 25 & 25 & 25 & 25 & 25 & 25 & 25 & 25 & 25 \\
-capacity (MW) & 815 & 0 & 0 & 0 & 8.38e+03 & 0 & 1.86e+04 & 0 & 2.81e+03 & 0 \\
+capacity (MW) & 250 & 0 & 0 & 0 & 500 & 0 & 500 & 0 & 0 & 1000 \\
 capacity\_factor & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 \\
 capacity\_credit & 0.5 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 0.19 & 0.35 \\
 efficiency & 0.85 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 \\
