first pass edit of benchmark chapter

--- a/analysis/scripts/04-benchmark-scripts/test_osier_mutliprocess.ipynb
+++ b/analysis/scripts/04-benchmark-scripts/test_osier_mutliprocess.ipynb
@@ -2175,6 +2175,30 @@
     "\n",
     "pool.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"../../../data/datacenter_results.pkl\", \"rb\") as f:\n",
+    "    dc_results = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
