--- a/docs/4-benchmark-results/40-benchmark.tex
+++ b/docs/4-benchmark-results/40-benchmark.tex
@@ -24,7 +24,7 @@ focuses on the logical dispatch algorithm and investigates how that algorithm sc
 number of threads used for parallelization.
 % \input{4-benchmark-results/41-demonstrate}
 \input{4-benchmark-results/45-new-dispatch}
-\section{Benchmark \ac{osier}}
+\section{Benchmarking \ac{osier}}
 \input{4-benchmark-results/42-1-benchmark-data}
 \input{4-benchmark-results/42-decide-ea}
 \input{4-benchmark-results/43-explore}
