--- a/docs/4-benchmark-results/43-explore.tex
+++ b/docs/4-benchmark-results/43-explore.tex
@@ -1,18 +1,18 @@
-\subsection{Exercise 2: Exploring objective space}
+\subsection{Exercise 5: Comparing against an established modeling framework}
 Since structural uncertainty persists regardless of the number of objectives
 used, it's important to check the near-optimal objective space for alternative
-solutions. In the first benchmark exercise, I used \ac{temoa} to calculate the
+solutions. In this benchmark exercise, I used \ac{temoa} to calculate the
 least-cost solution. Then I generated 30 alternative solutions with \ac{mga} as
 described in Section \ref{section:mga} with a 10\% slack variable added to
 \ac{temoa}'s objective function. Figure \ref{fig:temoa-benchmark-01} shows the
 points from \ac{temoa} in red and \ac{osier}'s Pareto-front for the same problem
 in black. The red- and gray-shaded regions are the sub-optimal spaces (i.e.,
-within 10\% of any objective) for \ac{temoa} and \ac{osier}, respectively.
-The solid black points indicates points along the Pareto-front, while the open
-black points are points tested in early generations of the \ac{osier} simulation.
-\footnote{There are many more tested points than shown in Figure \ref{fig:temoa-benchmark-01}. 
-For simplicity and clarity, Figure \ref{fig:temoa-benchmark-01} shows a random subset
-of points.}
+within 10\% of any objective) for \ac{temoa} and \ac{osier}, respectively. The
+solid black points indicates points along the Pareto-front, while the open black
+points are points tested in early generations of the \ac{osier}
+simulation.\footnote{There are many more tested points than shown in Figure
+\ref{fig:temoa-benchmark-01}. For simplicity and clarity, Figure
+\ref{fig:temoa-benchmark-01} shows a random subset of points.}
 
 \begin{figure}[h]
   \centering
@@ -41,7 +41,7 @@ Next, the sub-optimal spaces mostly overlap, indicating that \ac{temoa} could
 find a solution with lower carbon emissions after sufficient iterations.
 However, none of \ac{temoa}'s \ac{mga} solutions fall within \ac{osier}'s
 sub-optimal space. This point highlights the necessity for \acl{moo}. The
-objective of \ac{mga} is to produce a \textit{diverse subset} of points in the
+purpose of \ac{mga} is to produce a \textit{diverse subset} of points in the
 sub-optimal region. \ac{mga} may capture appealing alternatives for some
 unmodeled objective in the original problem, but it cannot guarantee that those
 solutions will be an improvement along any other objective axis. This is
@@ -55,7 +55,8 @@ discussed in Section \ref{section:uncertainty}. Therefore, identifying
 alternative solutions by sampling points in the inferior region is still useful.
 Figure \ref{fig:temoa-benchmark-02} focuses on the near-optimal space presented
 in \ref{fig:temoa-benchmark-01} and shows both the complete set of near-optimal
-solutions (green) and some randomly selected points, highlighted in red.
+solutions (green) and a subset of points, highlighted in red, chosen with the
+novel \ac{mga} procedure described in Section \ref{section:mga-moo}.
 
 \begin{figure}[h]
   \centering
@@ -73,7 +74,7 @@ other words, described according to the mix of technologies that produced a
 solution. Figure \ref{fig:temoa-benchmark-03} presents the spread of results in
 the decision space for each model. Figure \ref{fig:temoa-benchmark-03}a shows
 the spread of each technology present in \ac{osier}'s Pareto front. Figure
-\ref{fig:temoa-benchmark-03}b shows the same, but also includes the randomly
+\ref{fig:temoa-benchmark-03}b shows the same, but also includes the
 selected points from \ac{osier}'s near-optimal space. Lastly, Figure
 \ref{fig:temoa-benchmark-03}c shows the same kind of distribution for
 \ac{temoa}'s \ac{mga} solutions. Presented in this way, the design space results
@@ -83,8 +84,13 @@ ignored. For \ac{osier}, these technologies include both types of coal, biomass,
 and largely ignores wind energy. In \ac{temoa}'s results, there are no
 technologies that are totally absent. This result is due to the imperative built
 into standard \ac{mga} to identify solutions that are maximally different in
-design space, whereas \ac{osier} randomly selected points in its inferior
-region. This suggests one avenue for improving \ac{osier}.
+design space and its basis on a single objective. \ac{osier}'s \ac{mga} formulation
+increased the spread of several technologies and includes ``advanced'' natural gas
+(with \ac{ccs}). This supports the assertion that \ac{osier} samples near-optimal
+solutions based on maximally different solutions, with additional restrictions 
+from the dual objective problem. Thus, Figure \ref{fig:temoa-benchmark-03}b shows
+no solutions with a biomass or advanced coal. There is one solution with a small amount
+of conventional coal.
 
 \newpage
 \begin{figure}[ht!]
