updates chapter based on feedback from @npanczyk

--- a/docs/4-benchmark-results/40-benchmark.tex
+++ b/docs/4-benchmark-results/40-benchmark.tex
@@ -1,16 +1,17 @@
-\ac{osier} is a key tool that will be leveraged in the analysis of subsequent
-work. Accordingly, it must be shown that \ac{osier} generates reproducible and
-reliable, results consistent with the results from an established framework.
-This chapter has three objectives, the first is to illustrate some of the
+Due to its novelty, it is necessary to demonstrate that \ac{osier} 
+generates reproducible and reliable answers consistent with the results 
+from an established framework and that \ac{osier} is internally consistent
+across when applying different methods.
+To that end, this chapter illustrates some of the
 differences between the two dispatch algorithms introduced in Section
-\ref{section:dispatch_model}. The logical and optimal dispatch algorithms will
-be tested on some simple cases. Then the time scaling of the two algorithms will
-be compared. The second goal of this chapter, is to show that solutions
+\ref{section:dispatch_model} by testing the logical and optimal dispatch algorithms  
+on some simple cases, as well as comparing the time scaling of these two methods. 
+Second, this chapter verifies that solutions
 calculated by \ac{osier} agree with a more established \ac{esom}, \ac{temoa}.
-Finally, this chapter demonstrates some of \ac{osier}'s advanced features, such
+Finally, this chapter shows some of \ac{osier}'s advanced features, such
 as many-objective objective problems and combining \ac{moo} with \ac{mga}.
-The next section introduce some of the data and methods used to prepare the 
-example problems that follow.
+The next section introduces some of the data and methods used to prepare the 
+later example problems.
 
 \section{Data for the dispatch algorithm comparison}
 \subsection{Technology Data}
