--- a/docs/4-benchmark-results/42-decide-ea.tex
+++ b/docs/4-benchmark-results/42-decide-ea.tex
@@ -8,11 +8,12 @@ three \ac{moo} algorithms by showing the respective scatter plots and a density
 plot of the points on each axis. The three algorithms are \ac{nsga2},
 \ac{nsga3}, and \ac{unsga3}. The first two algorithms used the \ac{deap}
 implementation to show the breadth \ac{osier}'s support for different tools.
-Since it took \ac{unsga3} 128 generations to converge, the other two algorithms
-were also stopped after 128 generations, before converging. The density plot
-above the scatter plot shows the density of points along the ``total cost''
-objective. Similarly, the density plot to the right shows the distribution of
-points for the ``emissions'' objective.
+Since it took \ac{unsga3} 128 generations to converge, I also stopped the other
+two algorithms after 128 generations, before converging. The density plot above
+the scatter plot shows the density of points along the ``total cost'' objective.
+Similarly, the density plot to the right in Figure
+\ref{fig:algorithm-comparison} shows the distribution of points for the
+``emissions'' objective.
 
 There are a few notable features of Figure \ref{fig:algorithm-comparison}.
 First, all three algorithms identified very similar Pareto fronts, the main
