--- a/docs/tables/algorithm_comparison_results.tex
+++ b/docs/tables/algorithm_comparison_results.tex
@@ -1,12 +1,12 @@
-\begin{tabular}{lllllr}
+\begin{tabular}{lllr}
 \toprule
-Natural Gas & Nuclear & Wind & Storage & & Optimizer & Value \\
+ & scenario & optimizer & value \\
 \midrule
- &&& Gas and Nuclear & Logical & 1.84954 \\
- &&& Gas and Nuclear & Optimal & 1.84954 \\
- &&& Gas, Nuclear, and Wind & logical & 0.85499 \\
- &&& Gas, Nuclear, and Wind & optimal & 0.85499 \\
- &&& All & logical & 0.73009 \\
- &&& All & optimal & 0.58797 \\
+0 & gas & logical & 1.84954 \\
+1 & gas & optimal & 1.84954 \\
+2 & wind & logical & 0.85499 \\
+3 & wind & optimal & 0.85499 \\
+4 & all & logical & 0.73009 \\
+5 & all & optimal & 0.58797 \\
 \bottomrule
 \end{tabular}
