adds uiuc emissions plot

--- a/docs/7-interviews/70-outline.tex
+++ b/docs/7-interviews/70-outline.tex
@@ -173,6 +173,13 @@ gas distribution for the campus.
 
 Here is its climate action plan...
 
+\begin{figure}
+    \centering
+    \resizebox{0.75\columnwidth}{!}{\input{figures/07_interview_chapter/uiuc_emissions_plot.pgf}}
+    \caption{Annual emissions and targets at \ac{uiuc} from 2008 to 2050.}
+    \label{fig:uiuc-emissions}
+\end{figure}
+
 \subsection{Naperville, Illinois}
 Naperville is interesting because it owns the distribution utility that serves
 electricity but does not own any generation.
