adds illinois plot and minor writing changes

--- a/docs/7-interviews/70-outline.tex
+++ b/docs/7-interviews/70-outline.tex
@@ -1,10 +1,11 @@
 \section{Introduction}
 
-\textcolor{red}{Note for later: One of the key patterns I found in the interviews was
-that, although many interviewees were empathetic to justice-related efforts and 
-initiatives, those initiatives were delegated to a dedicated person or department
-within governing institutions. This suggests there is more work to be done 
-integrating energy justice and energy modeling/policy-making}
+\textcolor{red}{Note for later: One of the key patterns I found in the
+interviews was that, although many interviewees were empathetic to
+justice-related efforts and initiatives, those initiatives were delegated to a
+dedicated person or department within governing institutions. This suggests
+there is more work to be done integrating energy justice and energy
+modeling/policy-making}
 
 Earlier chapters introduced a novel modeling tool, \ac{osier}, which sought to
 fill a gap in the literature and available modeling tools by developing a
@@ -39,7 +40,7 @@ collecting and analyzing interview data using thematic analysis. Section
 
 \section{Literature Review?}
 
-\textcolor{red}{What are some of the novelties of this study}
+What are some relevant papers in the literature?
 \begin{enumerate}
     \item Multiple case study that looks at multiple scales of energy governance
     in the state of Illinois. Other studies that investigated multiple cases
@@ -48,6 +49,16 @@ collecting and analyzing interview data using thematic analysis. Section
     \item Another study asked ``What are the differences between energy model
     improvements as perceived by modellers, and the actual needs of users of
     model results'' \cite{susser_better_2022}?
+\end{enumerate}
+
+\textcolor{red}{Is the hypothesis I am testing with this study that 
+``municipalities would be better equipped to plan and design their 
+energy systems if the available modeling tools were accessible and 
+relevant.'' This hypothesis comes from the implicit suppositions in a few papers.
+}
+
+\textcolor{red}{What are some of the novelties of this study}
+\begin{enumerate}
     \item Considers structural barriers to energy modeling.
     \item Investigates the role concepts of energy justice do (or do not) play
     in energy policy for some places in Illinois.
@@ -58,22 +69,21 @@ collecting and analyzing interview data using thematic analysis. Section
 \label{section:interview-methods}
 
 \subsection{Thematic Analysis}
-This thesis relies on multiple case studies using interviews with energy
-planners and decision makers at local and state levels, extending the method
-described by Johannsen et al. 2021 \cite{johannsen_designing_2021}. The
-interviewees were chosen to be paradigmatic cases (\textcolor{red}{Is this
-really what I mean?}) \cite{flyvbjerg_five_2006}. The interviews were
-transcribed with the ``listen and revise method'' using the Whisper
-transcription tool \cite{battaglia_listen_2024}. Whisper uses \ac{ai} to
-automate the transcription process. Both the data and the \ac{ai} model used to
-transcribe the interview audio were hosted locally (i.e., without an internet
-connection), eliminating privacy concerns \cite{battaglia_listen_2024}. Figure
-\ref{fig:whisper} shows a screenshot of the Whisper interface. The interview
-coding step was also performed locally with the \texttt{Taguette} tool
-\cite{rampin_taguette_2021}. Figure \ref{fig:taguette} shows a screenshot of the
-\texttt{Taguette} software.
+This section describes a multiple-case study using interviews with energy
+planners, decision makers, and community advocates at local and state levels,
+extending the method described by Johannsen et al. 2021
+\cite{johannsen_designing_2021}. The interviewees were chosen to be paradigmatic
+cases (\textcolor{red}{Is this really what I mean?}) \cite{flyvbjerg_five_2006}.
+The raw data include interview transcriptions and the relevant municipal climate
+and energy plans, if available. The interviews were transcribed with the
+``listen and revise method'' using the Whisper transcription tool
+\cite{battaglia_listen_2024}. Whisper uses \ac{ai} to automate the transcription
+process. Both the data and the \ac{ai} model used to transcribe the interview
+audio were hosted locally (i.e., without an internet connection), eliminating
+privacy concerns \cite{battaglia_listen_2024}. Figure \ref{fig:whisper} shows a
+screenshot of the Whisper interface. 
 
-\begin{figure}
+\begin{figure}[htbp!]
     \centering
     \includegraphics[width=0.6\columnwidth]{figures/07_interview_chapter/whisper-screenshot.png}
     \caption{A screenshot of an interview transcribed with Whisper. To protect
@@ -82,7 +92,12 @@ coding step was also performed locally with the \texttt{Taguette} tool
     \label{fig:whisper}
 \end{figure}
 
-\begin{figure}
+
+The interview coding step was also
+performed locally with the \texttt{Taguette} tool \cite{rampin_taguette_2021}.
+Figure \ref{fig:taguette} shows a screenshot of the \texttt{Taguette} software.
+
+\begin{figure}[htbp!]
     \centering
     \includegraphics[width=0.6\columnwidth]{figures/07_interview_chapter/taguette-screenshot}
     \caption{A screenshot of the interview transcribed in Figure \ref{fig:whisper}
@@ -108,7 +123,16 @@ and beginning of 2025 using a semi-structured approach.
 Table \ref{tab:demographics} shows the sizes of each planning context by
 population.
 
+Figure \ref{fig:illinois-plot} highlights the case study regions within a map of
+Illinois. Due to their proximity, \ac{uiuc}, Champaign, and Urbana are
+identified together.
 
+\begin{figure}[ht!]
+    \centering
+    \resizebox{0.4\columnwidth}{!}{\input{figures/07_interview_chapter/illinois_plot.pgf}}
+    \caption{A map of Illinois with the case study regions highlighted.}
+    \label{fig:illinois-plot}
+\end{figure}
 
 \subsection{State of Illinois}
 Illinois is split between two \acp{rto}, MISO and PJM.
@@ -122,7 +146,7 @@ Illinois is split between two \acp{rto}, MISO and PJM.
 
 
 
-\begin{table}
+\begin{table}[ht!]
     \centering
     \caption{Summary demographics for the study regions.}
     \label{tab:demographics}
@@ -156,20 +180,20 @@ Here are their climate action plans...
 
 \subsection{\acf{uiuc}} 
 
-The \acl{uiuc} (\acs{uiuc} or ``The University''), Illinois' largest
-university, straddles the two municipalities of Champaign and Urbana and its
-student enrollment rivals the populations of its neighbors. \ac{uiuc} has
-uniquely diverse energy system including a wholly owned subsidiary company,
-\ac{pei}, that owns and operates energy supply and distribution for the campus
+The \acl{uiuc} (\acs{uiuc} or ``The University''), Illinois' largest university,
+straddles the two municipalities of Champaign and Urbana and its student
+enrollment rivals the populations of its neighbors. \ac{uiuc} has uniquely
+diverse energy system including a wholly owned subsidiary company, \ac{pei},
+that owns and operates energy supply and distribution for the campus
 \cite{affiliated_engineers_inc_utilities_2015}. \ac{pei} also enables \ac{uiuc}
-to participate in the open electricity market, buying and selling wholesale electricity.
-On the supply side, \ac{pei} owns a coal and natural gas cogeneration plant, Abbott Power Plant, which
-produces steam and electricity for the campus, as well as a chilled water
-storage system. \ac{uiuc} also has \acp{ppa} for wind
-\cite{breitweiser_wind_2016} and solar energy \cite{white_solar_2017,
-white_solar_2020} along with solar panels on several campus buildings. 
-On the distribution side, \ac{pei} operates steam, electric, and
-gas distribution for the campus. 
+to participate in the open electricity market, buying and selling wholesale
+electricity. On the supply side, \ac{pei} owns a coal and natural gas
+cogeneration plant, Abbott Power Plant, which produces steam and electricity for
+the campus, as well as a chilled water storage system. \ac{uiuc} also has
+\acp{ppa} for wind \cite{breitweiser_wind_2016} and solar energy
+\cite{white_solar_2017, white_solar_2020} along with solar panels on several
+campus buildings. On the distribution side, \ac{pei} operates steam, electric,
+and gas distribution for the campus. 
 
 Here is its climate action plan...
 
